Install MongoDB using Docker Compose + Connect with MongoDB + Create Schema + Save Record in Mongo Collection + Find, Update and Delete Record
